<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hj.yunerp.activity.RegisterCompanyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20"
        android:background="@color/white"
        android:orientation="vertical">

        <View style="@style/Module_DivisionView_HzTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:orientation="horizontal">

            <TextView
                style="@style/Module_TtView_LeftTheme"
                android:text="@string/module_register_cpNmae_tle" />

            <EditText
                android:id="@+id/registerCpName"
                style="@style/Module_EdView_RightTheme"
                android:hint="@string/module_register_cpName_tips"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <View
            style="@style/Module_DivisionView_HzTheme"
            android:layout_marginLeft="@dimen/size_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:orientation="horizontal">

            <TextView
                style="@style/Module_TtView_LeftTheme"
                android:text="@string/module_register_contact_tle" />

            <EditText
                android:id="@+id/registerContact"
                style="@style/Module_EdView_RightTheme"
                android:hint="@string/module_register_contact_tips"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <View
            style="@style/Module_DivisionView_HzTheme"
            android:layout_marginLeft="@dimen/size_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:orientation="horizontal">

            <TextView
                style="@style/Module_TtView_LeftTheme"
                android:text="@string/module_register_cpPsd_tle" />

            <EditText
                android:id="@+id/registerCpPsd"
                style="@style/Module_EdView_RightTheme"
                android:hint="@string/module_register_cpPsd_tips"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <View
            style="@style/Module_DivisionView_HzTheme"
            android:layout_marginLeft="@dimen/size_10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:orientation="horizontal">

            <TextView
                style="@style/Module_TtView_LeftTheme"
                android:text="@string/module_register_againCpPsd_tle" />

            <EditText
                android:id="@+id/registerAgainCpPsd"
                style="@style/Module_EdView_RightTheme"
                android:hint="@string/module_register_againCpPsd_tips"
                android:maxLines="1"
                android:singleLine="true" />

        </LinearLayout>

        <View style="@style/Module_DivisionView_HzTheme" />
    </LinearLayout>


    <Button
        android:id="@+id/register_cpNextStep"
        style="@style/Module_Btn_BuleStyle"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/module_register_nextStep_btn" />

</LinearLayout>
