<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hj.yunerp.activity.LoginActivity">


    <EditText
        android:id="@+id/userAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/module_register_myPhone_tips"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:singleLine="true" />


    <EditText
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/module_login_password_tips"
        android:imeActionId="6"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/login_rmbPsd_ck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_login_rmbPsd_tv" />

        <TextView
            android:id="@+id/account_register_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/size_10"
            android:layout_toLeftOf="@id/account_register_forgetPsd_tv"
            android:text="@string/module_login_register_tv"
            android:textSize="@dimen/font_size_14" />

        <TextView
            android:id="@+id/account_register_forgetPsd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/module_login_forgetPsd_tv"
            android:textSize="@dimen/font_size_14" />
    </RelativeLayout>

    <Button
        android:id="@+id/account_sign_in_button"
        style="@style/Module_Btn_BuleStyle"
        android:layout_marginLeft="@dimen/size_0"
        android:layout_marginRight="@dimen/size_0"
        android:text="@string/module_app_Login" />

</LinearLayout>
