<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        style="@style/Module_DivisionView_HzTheme"
        android:layout_marginTop="@dimen/size_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/size_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/Module_TtView_LeftTheme"
                android:layout_width="@dimen/size_300"
                android:layout_marginLeft="@dimen/size_10"
                android:text="@string/module_login_myPhone_tv" />

            <EditText
                android:id="@+id/register_myPhone_et"
                style="@style/Module_EdView_RightTheme"
                android:hint="@string/module_register_myPhone_tips"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_captcha_tv"
            style="@style/Module_TvView_LKeepTimeTheme"
            android:layout_marginLeft="@dimen/size_10"
            android:text="@string/module_register_gainCAPTCHA_tv" />

    </LinearLayout>


    <View
        style="@style/Module_DivisionView_HzTheme"
        android:layout_marginLeft="@dimen/size_10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            style="@style/Module_TtView_LeftTheme"
            android:layout_width="@dimen/size_300"
            android:layout_marginLeft="@dimen/size_10"
            android:text="@string/module_register_CAPTCHA_tv" />

        <EditText
            android:id="@+id/register_captcha_et"
            style="@style/Module_EdView_RightTheme"
            android:hint="@string/module_register_CAPTCHA_tips"
            android:inputType="number"
            android:maxLength="6"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_15" />

    </LinearLayout>

    <View style="@style/Module_DivisionView_HzTheme" />

    <Button
        android:id="@+id/register_nextStep_btn"
        style="@style/Module_Btn_BuleStyle"
        android:layout_marginTop="@dimen/size_20"
        android:text="@string/module_register_nextStep_btn" />


</LinearLayout>
